# aramlib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: example_array.c  example_vector.c
include/: aramlib.h
include/aramlib/: array.h  hashmap.h  vector.h
src/: array.c  hashmap.c  vector.c
tests/: test_array.c  test_vector.c
